# Livekit-Demo

./: .env.example  .gitignore  pyproject.toml  run.py
app/: __init__.py  main.py
app/core/: agent_config.py  agent_models.py  config.py
app/models/: agent.py
app/models/workflows/: __init__.py  nodes_schemas.py  workflow.py  workflow_schema.py
app/services/: __init__.py  agent.py  audio_controller.py  call_orchestrator.py  copilot_agent.py  observer_agent.py  session.py  user_state_controller.py
app/tools/: copilot.py
app/utils/: __init__.py  conversation.py  dag.py  data.py  data_validation.py  egress.py  hold_controller.py  lifecycle.py  mcp.py  models.py  session.py  url.py
app/workflows/: __init__.py  base_workflow.py  conditional_task_group.py  meeting_booking.py
app/workflows/nodes/: __init__.py  end.py  say.py  task.py
app/workflows/tasks/: __init__.py  collect_data.py  consent.py  meeting_booking.py
shared/: types.py
shared/core/: __init__.py  agent_config.py  agent_models.py  config.py
shared/models/: agent.py
